--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ path = "src/lib.rs"
 byteorder = "1.2.7"
 rpos_drv = { path = "rpos_drv" }
 crc = "1.8.1"
+tokio = { version = "1", features = ["rt"] }
 
 [dev-dependencies]
 hex-slice = "0.1.4"
